infra/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bio-ingress
  namespace: bioinformatica
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: bio.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bio-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bio-frontend
                port:
                  number: 3000
